--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
 	"root": true,
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["@typescript-eslint"],
+	"env": {
+		"node": true
+	},
 	"rules": {
 		"quotes": [
 			2,
