--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.26.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -21,6 +23,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-simple-star-rating": "^5.1.7",
+    "redux-persist": "^6.0.0",
     "sass": "^1.58.2",
     "typescript": "4.9.5"
   },
