--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-simple-star-rating": "^5.1.7",
