--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.26.1",
